Bug 187141 - Ktorrent falsly warns about low space
Summary: Ktorrent falsly warns about low space
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-14 15:27 UTC by Roland Wolters
Modified: 2009-11-30 18:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
low space (notify) (178.09 KB, image/png)
2009-11-15 19:55 UTC, Alexey Kuznetsov
Details
low space message (214.30 KB, image/png)
2009-11-15 19:56 UTC, Alexey Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roland Wolters 2009-03-14 15:27:43 UTC
Version:            (using KDE 4.2.1)
OS:                Linux
Installed from:    Fedora RPMs

Ktorrent warns about too low space when starting the download although the directory itself has plenty of space:

"You don't have enough disk space to download this torrent. Are you sure you
want to continue?"  

[axet@mini ~]$ df -h
Filesystem            Size  Used Avail Use% Mounted on
/dev/hda3              92G   23G   65G  26% /
tmpfs                 504M  156K  504M   1% /dev/shm  

The downstream bug is:
https://bugzilla.redhat.com/show_bug.cgi?id=490007
Comment 1 Joris Guisson 2009-03-15 10:48:43 UTC
The calculation must be wrong when using samba, should be easy to reproduce.
Comment 2 Joris Guisson 2009-07-24 13:29:15 UTC
This works fine here, the correct free disk space is calculated for a mounted samba share.
Comment 3 Joris Guisson 2009-07-24 13:30:15 UTC
And I get no error messages about lack of disk space.
Comment 4 Joris Guisson 2009-07-29 10:50:07 UTC
Seeing that I can't reproduce this, I'm closing this.
Comment 5 Alexey Kuznetsov 2009-11-15 19:55:41 UTC
Created attachment 38356 [details]
low space (notify)
Comment 6 Alexey Kuznetsov 2009-11-15 19:56:24 UTC
Created attachment 38357 [details]
low space message
Comment 7 Alexey Kuznetsov 2009-11-15 19:56:45 UTC
problem still here
Comment 8 Alexey Kuznetsov 2009-11-16 04:34:30 UTC
what is really strange: target file is completely allocated (i choise to fully allocate file before download).
Comment 9 Joris Guisson 2009-11-16 18:48:08 UTC
What does df -h return ?
Comment 10 Alexey Kuznetsov 2009-11-16 18:49:40 UTC
[axet@mini ~]$ df -h
Filesystem            Size  Used Avail Use% Mounted on
/dev/hda3              92G   14G   74G  16% /
tmpfs                 501M  892K  500M   1% /dev/shm
/dev/sda1             688G  349G  305G  54% /media/shared
[axet@mini ~]$
Comment 11 Joris Guisson 2009-11-17 18:11:05 UTC
Are you sure the remote filesystem is mounted ? If it is, it should be printed by df -h.
Comment 12 Alexey Kuznetsov 2009-11-17 18:21:15 UTC
yes, im sure.

i have network samba server called mini.local, to avoid share vilotions, selinux issues i do not download data directly to /media/shared hard drive and do it trougth gvfs file system.

you probably asks about mount command instead df, here is out of it:

[axet@mini ~]$ mount
/dev/hda3 on / type ext4 (rw,noatime)
proc on /proc type proc (rw)
sysfs on /sys type sysfs (rw)
devpts on /dev/pts type devpts (rw,gid=5,mode=620)
tmpfs on /dev/shm type tmpfs (rw)
/dev/sda1 on /media/shared type ext4 (rw,noatime)
none on /proc/sys/fs/binfmt_misc type binfmt_misc (rw)
sunrpc on /var/lib/nfs/rpc_pipefs type rpc_pipefs (rw)
gvfs-fuse-daemon on /home/axet/.gvfs type fuse.gvfs-fuse-daemon (rw,nosuid,nodev,user=axet)


so, how it works: i did ran mini.local server, samba server on it, mount self samba server located on same machine to ~/.gvfs folder and try to download torrents to it. that is particular example, same issues (with low space warinig) i got with remote machines located on same network.

so that is not server problem, that is specified problem of two applications: ktorrent + gvfs service.
Comment 13 Joris Guisson 2009-11-17 18:45:12 UTC
I'm thinking this gvfs stuff is breaking the diskspace calculation.
Comment 14 Alexey Kuznetsov 2009-11-17 18:46:15 UTC
the file already preallocated...
Comment 15 Joris Guisson 2009-11-17 18:51:43 UTC
Take a look at this bug:

https://bugzilla.gnome.org/show_bug.cgi?id=581924

Same problem other application(s), it appears that gvfs reports incorrect numbers.
Comment 16 Alexey Kuznetsov 2009-11-17 18:56:18 UTC
thx for ruling this out.

can u drop my attachments? or hide this report from public :)
Comment 17 Joris Guisson 2009-11-17 19:57:36 UTC
I don't see any option to delete attachments.
Comment 18 Joris Guisson 2009-11-17 20:01:39 UTC
I'm reopening this, by the looks of that bug, there is not much hurry to fix this. And from my googling, this seems to be intentional.
Comment 19 Alexey Kuznetsov 2009-11-17 20:02:33 UTC
most bugtracking systems have special flag "Security Sensitive Bug". to hide this bug report from public. you know, i have some file names i did published here not so polite :)
Comment 20 Joris Guisson 2009-11-17 20:07:45 UTC
I don't see anything like that.
Comment 21 Alexey Kuznetsov 2009-11-17 20:09:40 UTC
deep throat is really rare porno movie (very nice :), and others are illegal downloads.
Comment 22 Joris Guisson 2009-11-30 18:26:21 UTC
SVN commit 1056720 by guisson:

Ignore diskspace check when it cannot be determined on a gvfs mounted filesystem.

BUG: 187141


 M  +1 -0      ChangeLog  
 M  +16 -10    ktorrent/dialogs/fileselectdlg.cpp  
 M  +3 -0      libbtcore/util/fileops.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1056720