Ignore diskspace check when it cannot be determined on a gvfs mounted filesystem.

BUG: 187141

svn path=/trunk/extragear/network/ktorrent/; revision=1056720