libbtcore/util/fileops.cpp
@@ -438,6 +438,9 @@ namespace bt
 		if (statvfs(QFile::encodeName(path), &stfs) == 0)
 #endif
 		{
+			if (stfs.f_blocks == 0) // if this is 0, then we are using gvfs
+				return false;
+
 			bytes_free = ((Uint64)stfs.f_bavail) * ((Uint64)stfs.f_frsize);
 			return true;
 		}
